# Python-MLB-Whiff_Percentage

./: .env.example  .gitignore  README.md  SAMPLE_SIZES.md  TABLES.md  al_east_starters_2025_roster.csv  al_west_starters_2025_roster.csv  analyze_pitches.py  app.py  fetch_starters.py  home.py  nl_east_starters_2025_roster.csv  nl_west_starters_2025_roster.csv  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
backend/: main.py
backend/v2/: __init__.py  constants.py  db.py  lookups.py  matchup.py  models.py  player_names.py  sequences.py
data/: al_central_starters_2025_roster.csv  al_central_starters_2025_roster.parquet  al_west_starters_2025_roster.parquet  nl_central_starters_2025_roster.csv  nl_central_starters_2025_roster.parquet  nl_west_starters_2025_roster.parquet
data/legacy/: al_east_starters_2025_roster.parquet  nl_east_starters_2025_roster.parquet
deploy/: README.md  crontab.example
deploy/systemd/: baseball-daily-update.service  baseball-daily-update.timer
frontend/: .env.development  .env.example  .env.vm  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: BreakdownTable.jsx  EdgeTable.jsx  Histogram.jsx  Metric.jsx  PitchDetailTable.jsx  PlayerCombo.jsx  Scatter.jsx  SequenceTable.jsx  (+2 more)
reports/first_pitch_offspeed/: analyze.py  page.py
src/baseball/: __init__.py  cli.py  config.py
tests/: conftest.py  test_api_v2.py  test_cli.py  test_daily_update.py  test_derived.py  test_ingest.py  test_storage.py
(+22 files in other folders)
